# ChangeLog for dev-ruby/libnotify
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*libnotify-0.5.6 (13 Jul 2011)

  13 Jul 2011; Hans de Graaff <graaff@gentoo.org> +libnotify-0.5.6.ebuild,
  +metadata.xml:
  Initial import.
