@@ -2,13 +2,15 @@
 Hash: SHA256
 
 DIST libnotify-0.5.6.gem 28672 RMD160 72c439351debde750f18cf7d034d6d3f3b82079d SHA1 4e1f72f12fc90fea960c1e29afa4d5a23140b8b3 SHA256 a19fea89e18bcbe5feaec1dd8b69ed8912f89e1fb1a5b7904a96bc065b5da9df
+DIST libnotify-0.5.7.gem 29184 RMD160 1cfdf1591f549a74dd707a4bf1b68786df051183 SHA1 dd6488a421897ed04b6189e16b6468c86f2f1b36 SHA256 0645899aab628b9e16e924708c21aa65e84c2550e5a17c2643d0f8a19fb337a5
 EBUILD libnotify-0.5.6.ebuild 793 RMD160 7cc62629f795d0b56ff0db5869930be591e30c3d SHA1 48d86d17679242e5bf6be361333f496ef2810ad5 SHA256 423aa4b4496aa13160d4b014abcbedd95acf4a01ddb8832ff1731ba96ad768d5
-MISC ChangeLog 262 RMD160 efde6b15dfd4c1d774df091720679780ecb425bb SHA1 173e115dfaade8f6290521b08c85f6b31c62a814 SHA256 4c07879b9e64ddb24994c98ed22b34cd68f000c5f8db0d515ed66c1f8ed137e5
+EBUILD libnotify-0.5.7.ebuild 739 RMD160 720042c593c1acef5dd784aab0e07024a6ab2e04 SHA1 ecf6297adc252597aeb04bd0fd950b13d4f19494 SHA256 d867b939a4815e35533509c5828ba41aadc6c5b4301275e73b7f829e98a2c67d
+MISC ChangeLog 386 RMD160 90f86931febb3a14ca8cd461e1ecffa4c30bb965 SHA1 7e6b7e7fb074f7f731a076736112e7cef8140c22 SHA256 f2032880328b8a52e5afde08ab74a01ed121482dd145d357042ad9064ec141a0
 MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk4dWKIACgkQiIP6VqMIqNfpRwD/SDPHYJec7xQNFnXd3WdL2FUm
-fv+zDqpRm6foQRgHXfMA/A7RSPvUPbls+chs7hrzU7fjdMafVAA1i1euUaf8kU03
-=+mQD
+iF4EAREIAAYFAk474awACgkQiIP6VqMIqNcXTAD6A+gZVY+rgQw5vYrivVcezM7J
+ifOfmf/wPEfocDkQ8HIBAIlArrFBZBgqd7Y2VCs0/eXUmW9RgLCtabTj0Jj4Yncw
+=qcJD
 -----END PGP SIGNATURE-----
