@@ -2,6 +2,11 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*libnotify-0.5.7 (05 Aug 2011)
+
+  05 Aug 2011; Hans de Graaff <graaff@gentoo.org> +libnotify-0.5.7.ebuild:
+  Version bump.
+
 *libnotify-0.5.6 (13 Jul 2011)
 
   13 Jul 2011; Hans de Graaff <graaff@gentoo.org> +libnotify-0.5.6.ebuild,
